--- a/uhi.scss
+++ b/uhi.scss
@@ -167,6 +167,11 @@ code {
     padding: 1px 3px;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .uhi {
     font-family: 'Nunito', sans-serif;
 
