--- a/uhi.css
+++ b/uhi.css
@@ -144,6 +144,11 @@ code {
   padding: 1px 3px;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .uhi {
   font-family: 'Nunito', sans-serif;
 }
