--- a/uhi.scss
+++ b/uhi.scss
@@ -83,7 +83,8 @@ summary,
 time,
 mark,
 audio,
-video {
+video,
+accent {
     margin: 0;
     padding: 0;
     border: 0;
@@ -145,10 +146,10 @@ $gray: #515151;
 $black: #000;
 $dark-blue: #080859;
 $blue: #167cf7;
-$cyan: #00ecec;
+$cyan: #3fdaca;
 $green: #07eb66;
 $yellow: #f0df0d;
-$orange: #fa900a;
+$orange: #ff9900;
 $pale-orange: #ffcd8b;
 $red: #de0f0a;
 $pink: #f81899;
@@ -159,6 +160,7 @@ $purple: #9f0bf9;
 $river: linear-gradient(120deg, $dark-blue, $green);
 $candy: linear-gradient(145deg, $pink, $pale-pink);
 $juice: linear-gradient(145deg, $orange, $pale-orange);
+$summer: linear-gradient(100deg, $pink, $orange, $cyan);
 
 code {
     font-family: monospace !important;
@@ -170,34 +172,46 @@ code {
 a {
     text-decoration: none;
     color: inherit;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+p {
+    line-height: 150%;
 }
 
 .uhi {
     font-family: 'Nunito', sans-serif;
 
-    &.btn {
-        position: relative;
-    }
-
-
-
     &.gradient {
 
         &-river,
-        &-river:before {
+        &-river:before,
+        &-river:after {
             background: $river;
             color: $white;
         }
 
         &-candy,
-        &-candy:before {
+        &-candy:before,
+        &-candy:after {
             background: $candy;
             color: $white;
         }
 
         &-juice,
-        &-juice:before {
+        &-juice:before,
+        &-juice:after {
             background: $juice;
+            color: $white;
+        }
+
+        &-summer,
+        &-summer:before,
+        &-summer:after {
+            background: $summer;
             color: $white;
         }
     }
@@ -344,6 +358,7 @@ a {
         box-shadow: 0px 0px 50px -20px $black;
         margin: 2%;
         border: none;
+        z-index: 0;
 
         .title {
             text-align: left;
@@ -411,18 +426,128 @@ a {
 
     &.white {
         background-color: $white;
+
+        &::before,
+        &::after {
+            background-color: $white;
+        }
     }
 
     &.black {
         background-color: $black;
+
+        &::before,
+        &::after {
+            background-color: $black;
+        }
     }
 
     &.lightgray {
         background-color: $light-gray;
+
+        &::before,
+        &::after {
+            background-color: $light-gray;
+        }
+    }
+
+    &.dark-blue {
+        background-color: $dark-blue;
+
+        &::before,
+        &::after {
+            background-color: $dark-blue;
+        }
+    }
+
+    &.blue {
+        background-color: $blue;
+
+        &::before,
+        &::after {
+            background-color: $blue;
+        }
+    }
+
+    &.cyan {
+        background-color: $cyan;
+
+        &::before,
+        &::after {
+            background-color: $cyan;
+        }
+    }
+
+    &.green {
+        background-color: $green;
+
+        &::before,
+        &::after {
+            background-color: $green;
+        }
+    }
+
+    &.yellow {
+        background-color: $yellow;
+
+        &::before,
+        &::after {
+            background-color: $yellow;
+        }
     }
 
     &.orange {
         background-color: $orange;
+
+        &::before,
+        &::after {
+            background-color: $orange;
+        }
+    }
+
+    &.pale-orange {
+        background-color: $pale-orange;
+
+        &::before,
+        &::after {
+            background-color: $pale-orange;
+        }
+    }
+
+    &.red {
+        background-color: $red;
+
+        &::before,
+        &::after {
+            background-color: $red;
+        }
+    }
+
+    &.pink {
+        background-color: $pink;
+
+        &::before,
+        &::after {
+            background-color: $pink;
+        }
+    }
+
+    &.pale-pink {
+        background-color: $pale-pink;
+
+        &::before,
+        &::after {
+            background-color: $pale-pink;
+        }
+    }
+
+    &.purple {
+        background-color: $purple;
+
+        &::before,
+        &::after {
+            background-color: $purple;
+        }
     }
 
     &.button {
@@ -452,7 +577,7 @@ a {
 
             &:hover {
                 cursor: pointer;
-                filter: brightness(1.4);
+                filter: brightness(1.2);
 
                 &:before {
                     content: '';
@@ -479,7 +604,7 @@ a {
 
             &:hover {
                 cursor: pointer;
-                filter: brightness(1.4);
+                filter: brightness(1.2);
 
                 &:before {
                     content: '';
@@ -503,10 +628,71 @@ a {
 
         .left {
             float: left;
+            left: 0;
         }
 
         .right {
             float: right;
+            right: 0;
+        }
+    }
+
+    @at-root accent#{&} {
+        padding: 0px 5px;
+        z-index: 10;
+
+        &.smooth {
+            border-radius: 4px;
+        }
+
+        &.hover {
+            background: transparent;
+            color: inherit;
+            position: relative;
+            transition: color ease-in-out .4s,
+                font-weight ease-in-out .4s;
+
+            &:before {
+                content: '';
+                left: 0;
+                top: 0;
+                right: 100%;
+                bottom: 0;
+                height: inherit;
+                border-radius: inherit;
+                position: absolute;
+                width: 0%;
+                z-index: -1;
+                transition: width ease-in-out .4s;
+            }
+
+            &:hover {
+                color: $white;
+
+                &.weight {
+                    font-weight: bold;
+                }
+
+                &:before {
+                    width: 100%;
+                    right: 0;
+
+                }
+            }
+        }
+
+        &.underlined {
+            border: solid 3px transparent;
+
+            &::after {
+                content: '';
+                position: absolute;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                height: 3px;
+                border-radius: inherit;
+            }
         }
     }
 }
